# AstrBot

./: .dockerignore  .gitignore  Dockerfile  README.md  README_en.md  README_ja.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto_release.yml  dashboard_ci.yml  docker-image.yml
astrbot/cli/: __main__.py
astrbot/cli/commands/: __init__.py  cmd_conf.py  cmd_init.py  cmd_plug.py  cmd_run.py
astrbot/cli/utils/: __init__.py  basic.py  plugin.py  version_comparator.py
astrbot/core/: __init__.py  conversation_mgr.py  core_lifecycle.py  event_bus.py  file_token_service.py  initial_loader.py  log.py  updator.py  zip_updator.py
astrbot/core/config/: astrbot_config.py  default.py
astrbot/core/db/: sqlite.py
astrbot/core/message/: components.py  message_event_result.py
astrbot/core/pipeline/: __init__.py  scheduler.py  stage.py
astrbot/core/platform/: astr_message_event.py  astrbot_message.py  manager.py
astrbot/core/provider/: entities.py  func_tool_manager.py  manager.py  provider.py
astrbot/core/rag/: knowledge_db_mgr.py
astrbot/core/star/: __init__.py  config.py  context.py  star.py  star_handler.py  star_manager.py  star_tools.py  updator.py
astrbot/core/utils/: astrbot_path.py  io.py  metrics.py  path_util.py  pip_installer.py  shared_preferences.py  tencent_record_helper.py
astrbot/dashboard/: server.py
astrbot/dashboard/routes/: __init__.py  auth.py  chat.py  config.py  conversation.py  file.py  log.py  plugin.py  stat.py  static_file.py  tools.py  update.py
changelogs/: v3.5.1.md  v3.5.10.md  v3.5.11.md  v3.5.12.md  v3.5.13.md  v3.5.14.md  v3.5.15.md  v3.5.16.md  v3.5.17.md  v3.5.2.md  v3.5.3.1.md  v3.5.3.2.md  v3.5.3.md  v3.5.4.md  v3.5.5.md  v3.5.6.md  v3.5.7.md  v3.5.8.md  v3.5.9.md
dashboard/: README-i18n.md  package.json
dashboard/src/: config.ts  main.ts
(+187 files in other folders)
